<resources>
    <string name="app_name">Leaderboard</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="extra_info_list">Extra Info</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission Not Successful</string>
    <string name="submit">Submit</string>
    <string name="project_on_github_link">Project on Github(link)</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="project_submission">Project Submission</string>
    <string name="submit_form">Submit</string>
</resources>