<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/confirmAlert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <ImageButton
                android:id="@+id/buttonCancel"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textViewConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:drawableEnd="@drawable/ic_question"
                android:drawableRight="@drawable/ic_question"
                android:text="@string/are_you_sure"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.394" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:indeterminateTint="@color/colorAccentDark"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/buttonConfirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewConfirm" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonConfirm"
                style="@style/MaterialTextButtonOutlineStyle"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="75dp"
                android:paddingRight="75dp"
                android:text="@string/yes"
                android:theme="@style/Theme.MaterialComponents"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewConfirm" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/failedAlert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageFailed"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_baseline_warning"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submission_not_successful"
                android:textSize="20sp"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageFailed" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/successAlert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/imageSuccess"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_baseline_check_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submission_successful"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageSuccess" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</LinearLayout>